tests/bad/res3.pas
program res;

var
record: integer;
begin

end

;
